Revert "Make members final and use Map/List.of() to simplify logic sprinkled …"